fix: message container overflow

--- a/src/style.css
+++ b/src/style.css
@@ -99,6 +99,7 @@ input:focus {
   flex-direction: column;
   align-items: flex-end;
   padding: 0.5rem;
+  overflow: auto;
 }
 
 #messages > .message:nth-of-type(2) {
